--- a/replate/package.json
+++ b/replate/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-intl": "^2.8.0",
     "react-loader-spinner": "^2.3.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
